--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="todo-app">
-        <h2>Kegiatan Selama Libur semester <img src="img/logo.png" alt="" /></h2>
+        <h2>App to-do list <img src="img/logo.png" alt="" /></h2>
         <div class="row">
           <input type="text" id="input-box" placeholder="Masukkan kegiatan di sini" />
           <button onclick="tambahTugas()">+ Add</button>
